test-resources/invalid-project/src/main/java/test/group/id/RTLI.java
package test.group.id;

/**
 * ⁧
 * Bidi characters above
 */
public class RTLI
{
    public static void main( String[] args )
    {
        System.out.println( "Hello World!" );
    }
}
